RESOLVED FIXED272666
Fix potential unified build error
https://bugs.webkit.org/show_bug.cgi?id=272666
Summary Fix potential unified build error
Przemyslaw Gorszkowski
Reported 2024-04-15 05:16:53 PDT
After 277470@main it is possible that there will be a compiler error in unified build (if UserScript.cpp and UserStyleSheet.cpp will be in the same unified file).
Attachments
Przemyslaw Gorszkowski
Comment 1 2024-04-15 05:44:34 PDT
In both files is the global static function with the same name.
Przemyslaw Gorszkowski
Comment 2 2024-04-15 05:52:52 PDT
EWS
Comment 3 2024-04-16 01:46:28 PDT
Committed 277533@main (4e328a1f0c16): <https://commits.webkit.org/277533@main> Reviewed commits have been landed. Closing PR #27256 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2024-04-16 01:47:13 PDT
Note You need to log in before you can comment on or make changes to this bug.