Fix potential unified build error https://bugs.webkit.org/show_bug.cgi?id=272666

Reviewed by Adrian Perez de Castro.

The problem is the same name of global static function in two cpp files.
This change resolves potential compiler error in unified build.

* Source/WebCore/page/UserScript.cpp:
(WebCore::generateUserScriptUniqueURL):
(WebCore::UserScript::UserScript):
(WebCore::generateUniqueURL): Deleted.
* Source/WebCore/page/UserStyleSheet.cpp:
(WebCore::generateUserStyleUniqueURL):
(WebCore::UserStyleSheet::UserStyleSheet):
(WebCore::generateUniqueURL): Deleted.

Canonical link: https://commits.webkit.org/277533@main